<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#161616"
    android:textColor="#fff"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#252525"
        android:minHeight="?attr/actionBarSize"
        android:textColor="#fff"
        android:theme="?attr/actionBarTheme"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="211dp"
        android:layout_height="35dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="50dp"
        android:text="@string/app_bar"
        android:textColor="#fff"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.4" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingTop="80dp"
        android:paddingBottom="120dp"
        android:paddingEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.45">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:paddingEnd="1dp"
            android:text="@string/UserPreset"
            android:textColor="#fff"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="@+id/tabpager"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.15" />

        <TextView
            android:id="@+id/textViewtip"
            android:layout_width="350dp"
            android:layout_height="20dp"
            android:paddingEnd="1dp"
            android:text="@string/PresetSub"
            android:textColor="#555"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="@+id/tabpager"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/I_retoro"
                    android:layout_width="wrap_content"
                    android:layout_height="260dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/backbordgray"
                    android:contentDescription="retoro"
                    android:scaleType="centerInside"
                    android:src="@drawable/pr1" />

                <ImageButton
                    android:id="@+id/I_pastel"
                    android:layout_width="wrap_content"
                    android:layout_height="260dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/backbordgray"
                    android:contentDescription="pastel"
                    android:scaleType="centerInside"
                    android:src="@drawable/pr2" />

                <ImageButton
                    android:id="@+id/I_unreal"
                    android:layout_width="wrap_content"
                    android:layout_height="260dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/backbordgray"
                    android:contentDescription="unreal"
                    android:scaleType="centerInside"
                    android:src="@drawable/pr3" />

                <ImageButton
                    android:id="@+id/I_color"
                    android:layout_width="wrap_content"
                    android:layout_height="260dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/backbordgray"
                    android:contentDescription="Color"
                    android:scaleType="centerInside"
                    android:src="@drawable/pr4" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/btn_Lr"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/buttonshape"
        android:text="@string/LaunchLr"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <Button
        android:id="@+id/hint_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/icon_h"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007" />

</androidx.constraintlayout.widget.ConstraintLayout>